First try in moving the generated files and testing it

--- a/gradle-kubernetes-plugin/src/main/swagger/tpl/model.mustache
+++ b/gradle-kubernetes-plugin/src/main/swagger/tpl/model.mustache
@@ -21,6 +21,7 @@ import org.gradle.model.Managed;
 import org.gradle.model.Unmanaged;
 import org.gradle.model.ModelMap;
 import org.gradle.model.ModelSet;
+import com.github.kolleroot.gradle.kubernetes.model.api.*;
 
 {{#models}}
 {{#model}}
